tests/trybuild_fails/not_sync_dep.stderr
error[E0277]: `UnsafeCell<()>` cannot be shared between threads safely
  --> tests/trybuild_fails/not_sync_dep.rs:32:18
   |
32 |     check_sync::<Pair<MyOwner>>();
   |                  ^^^^^^^^^^^^^ `UnsafeCell<()>` cannot be shared between threads safely
   |
   = help: within `NotSync`, the trait `Sync` is not implemented for `UnsafeCell<()>`
note: required because it appears within the type `NotSync`
  --> tests/trybuild_fails/not_sync_dep.rs:6:8
   |
6  | struct NotSync(UnsafeCell<()>);
   |        ^^^^^^^
   = note: required for `Pair<MyOwner>` to implement `Sync`
note: required by a bound in `check_sync`
  --> tests/trybuild_fails/not_sync_dep.rs:25:18
   |
25 | fn check_sync<T: Sync>() {}
   |                  ^^^^ required by this bound in `check_sync`
